--- a/Android SQLlite/app/src/main/res/layout/single_row.xml
+++ b/Android SQLlite/app/src/main/res/layout/single_row.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/singlerow_id"
         android:layout_margin="8dp"
         android:padding="10dp"
         android:orientation="vertical">
